--- a/blog001.html
+++ b/blog001.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="Imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>HTML na prática</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/midia-query.css">
 </head>
 
