--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="Imagens/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>HTML na prática</title>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <title>Como Mudar</title>
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/midia-query.css">
 </head>
 
 <body>
     <header>
-        <h1>Como adicionar imagem HTML, na pratica!</h1>
+        <h1> A melhor maneira de promover a mudança de hábitos</h1>
         <span id="menu-burger" class="material-symbols-outlined" onclick="clickmenu()">
             menu
-            </span>
+        </span>
         <menu id="itens">
             <ul>
                 <li><a href="">Home</a></li>
@@ -26,47 +27,74 @@
             </ul>
         </menu>
     </header>
-   
+
     <main>
-    
+
         <article>
 
-            <h2>1.1 Sanserif é uma fonte sem Serifa</h2>
+            <p>Este Blog se baseia no <a href="https://www.amazon.com.br/Como-mudar-pesquisas-transformar-comportamento-ebook/dp/B09SGL7BN4" target="_blank"><strong>livro: "Como Mudar"</strong></a> e tem por fim compartilhar conhecimento útil. Cada capítulo se
+                concentra num obstáculo interno que o impede de alcançar o sucesso.</p>
 
-            <p>Como fazer para inserir uma imagem em seu código <abbr title="Hypertext Markup Language">HTML</abbr>, aplicar tag <strong>semântica</strong> em sua imagem (que ajuda muito a raquear seu site nos mecanismos de busca) e garantir a <strong>resposividade</strong> (adequar a imagem a diferentes tamanhos de tela).</p>
+            <h2>Como começar</h2>
+            <p>Se você quer <strong>mudar seu comportamento ou o de outra pessoa</strong>, terá uma enorme vantagem se partir de uma
+                tábua rasa, de um recomeço, sem nenhum hábito antigo jogando contra.</p>
 
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut excepturi at laborum tempore illo accusamus magni <strong>aspernatur</strong> mollitia, doloremque dolorum nulla provident ex, repudiandae quod eum <a href="">reiciendis</a> nisi pariatur aliquid. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa unde <a href="">voluptatem</a> minus molestiae officiis fugiat voluptatum facere sequi <a href="">voluptates</a> ut totam <strong>ratione</strong>, deserunt nulla, veniam <strong>fugit</strong> nisi architecto harum ducimus.</p>
+                <div id="container">
 
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut excepturi at laborum tempore illo accusamus magni aspernatur mollitia, doloremque dolorum nulla provident ex, repudiandae quod eum reiciendis nisi pariatur aliquid. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa unde voluptatem minus molestiae officiis fugiat voluptatum facere sequi voluptates ut totam ratione, deserunt nulla, veniam fugit nisi architecto harum ducimus.</p>
+                </div>
 
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut excepturi at laborum tempore illo accusamus magni aspernatur mollitia, doloremque dolorum nulla provident ex, repudiandae quod eum reiciendis nisi pariatur aliquid. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa unde voluptatem minus molestiae officiis fugiat voluptatum facere sequi voluptates ut totam ratione, deserunt nulla, veniam fugit nisi architecto harum ducimus.</p>
+            <h3>Efeito recomeço</h3>
+            <p><strong>Datas especiais</strong>, como um evento de ano novo, dia do seu aniversário e segundas-feiras são datas adequadas
+                para iniciar mudanças, uma vez que tem um efeito psicológico positivo. Já que nos <strong>sentimos</strong> de algum modo
+                <strong>distanciados de nossos fracassos anteriores</strong>. Além de datas, pode-se realizar um recomeço em caso de
+                eventos importantes: como uma <strong>mudança</strong> de casa; greve nos transportes; uma doença; promoção; ou
+                transferência para outra cidade. Quanto maior o marco, mais chances de dar um passo para trás,
+                reorganizar o pensamento é fazer uma ruptura radical com o passado.
+            </p>
 
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut excepturi at laborum tempore illo accusamus magni aspernatur mollitia, doloremque dolorum nulla provident ex, repudiandae quod eum reiciendis nisi pariatur aliquid. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa unde voluptatem minus molestiae officiis fugiat voluptatum facere sequi voluptates ut totam ratione, deserunt nulla, veniam fugit nisi architecto harum ducimus.</p>
+            <h3>Desvantagens do recomeço </h3>
+            <p>
+                Os recomeços em geral beneficiam quem vem desempenhando mal, mas prejudica quem de certa forma vem
+                desempenhando bem. Nem todo mundo se beneficia de um recomeço. Quando você está indo bem, qualquer
+                perturbação pode ser prejudicial.
+            </p>
 
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut excepturi at laborum tempore illo accusamus magni aspernatur mollitia, doloremque dolorum nulla provident ex, repudiandae quod eum reiciendis nisi pariatur aliquid. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa unde voluptatem minus molestiae officiis fugiat voluptatum facere sequi voluptates ut totam ratione, deserunt nulla, veniam fugit nisi architecto harum ducimus.</p>
+            <h3>Quando incentivar a mudança</h3>
+            <p>
+                Estudos mostram que talvez seja possível <strong>encorajar</strong> uma vasta gama de <strong>comportamentos</strong> orientados por
+                objetivos
+                se acertarmos o momento de fazer nossas sugestões, seja para matricular em um curso online, comprar
+                aparelhos eletrodomésticos mais eficientes energeticamente ou agendar consultas de saúde de rotina.
+            </p>
+
+            <p>
+                Portanto, <strong>caso queira mudar</strong> é interessante que busque por oportunidades de recomeço. Responda a seguinte
+                pergunta: existe alguma data próxima que poderia representar uma ruptura radical com o passado? Pode ser
+                um aniversário, ano novo, segunda-feira, primeiro dia de um mês ou até mesmo uma mudança física de
+                ambiente.
+            </p>
 
             <p id="print">
 
             </p>
 
 
-            
-        </article>
-</main>
-<footer>
-    <p>Site produzido por © <a href="">Vitor M. Santos</a></p>
-</footer>
 
-<script>
-    function clickmenu() {
-        if (itens.style.display == 'block') 
-        {
-            itens.style.display = 'none'
-        } else {
-            itens.style.display = 'block'
+        </article>
+    </main>
+    <footer>
+        <p>Site produzido por © <a href="">Vitor M. Santos</a></p>
+    </footer>
+
+    <script>
+        function clickmenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
         }
-    }
-</script>
+    </script>
 </body>
 
 </html>
